SAMA5D2_Xplained: update defconfig.
Signed-off-by: Takeyoshi Kikuchi <kikuchi@centurysys.co.jp>

--- a/arch/arm/configs/sama5d2_xplained_defconfig
+++ b/arch/arm/configs/sama5d2_xplained_defconfig
@@ -360,15 +360,15 @@ CONFIG_CMD_MEMCMP=y
 CONFIG_CMD_MEMCPY=y
 CONFIG_CMD_MEMSET=y
 # CONFIG_CMD_MEMTEST is not set
-# CONFIG_CMD_MM is not set
+CONFIG_CMD_MM=y
 CONFIG_CMD_MW=y
 # end of Memory
 
 #
 # Hardware manipulation
 #
-# CONFIG_CMD_CLK is not set
-# CONFIG_CMD_DETECT is not set
+CONFIG_CMD_CLK=y
+CONFIG_CMD_DETECT=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
@@ -509,7 +509,7 @@ CONFIG_I2C_AT91=y
 # CONFIG_I2C_MUX is not set
 CONFIG_MTD=y
 CONFIG_MTD_WRITE=y
-CONFIG_MTD_OOB_DEVICE=y
+# CONFIG_MTD_OOB_DEVICE is not set
 # CONFIG_MTD_RAW_DEVICE is not set
 # CONFIG_MTD_CONCAT is not set
 
@@ -531,7 +531,7 @@ CONFIG_MTD_M25P80=y
 # CONFIG_DRIVER_CFI is not set
 # CONFIG_NAND is not set
 CONFIG_MTD_SPI_NOR=y
-# CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
+CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_MTD_UBI is not set
 CONFIG_DISK=y
@@ -564,6 +564,7 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_GADGET is not set
 # CONFIG_USB_MUSB is not set
 # CONFIG_VIDEO is not set
+CONFIG_MCI_SDHCI=y
 CONFIG_MCI=y
 
 #
@@ -578,7 +579,8 @@ CONFIG_MCI_WRITE=y
 # --- MCI host drivers ---
 #
 # CONFIG_MCI_DW is not set
-CONFIG_MCI_ATMEL=y
+# CONFIG_MCI_ATMEL is not set
+CONFIG_MCI_SAMA5D2=y
 # CONFIG_MCI_MMCI is not set
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_SPI is not set
