sama5d2_xplained: update defconfig.
Signed-off-by: Takeyoshi Kikuchi <kikuchi@centurysys.co.jp>

--- a/arch/arm/configs/sama5d2_xplained_defconfig
+++ b/arch/arm/configs/sama5d2_xplained_defconfig
@@ -136,13 +136,13 @@ CONFIG_MMU=y
 CONFIG_MMU_EARLY=y
 CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
-CONFIG_STACK_SIZE=0x8000
+CONFIG_STACK_SIZE=0x10000
 CONFIG_MALLOC_SIZE=0x10000000
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
-CONFIG_MALLOC_TLSF=y
+CONFIG_MALLOC_DLMALLOC=y
+# CONFIG_MALLOC_TLSF is not set
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_HANG is not set
@@ -196,9 +196,9 @@ CONFIG_DEFAULT_ENVIRONMENT=y
 CONFIG_DEFAULT_COMPRESSION_LZO=y
 # CONFIG_DEFAULT_COMPRESSION_NONE is not set
 CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
-CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d4_xplained/env"
+CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d2_xplained/env"
 # CONFIG_BAREBOXENV_TARGET is not set
-# CONFIG_BAREBOXCRC32_TARGET is not set
+CONFIG_BAREBOXCRC32_TARGET=y
 CONFIG_POLLER=y
 # CONFIG_STATE is not set
 # CONFIG_BOOTCHOOSER is not set
@@ -354,7 +354,8 @@ CONFIG_CMD_TIMEOUT=y
 #
 # Memory
 #
-# CONFIG_CMD_CRC is not set
+CONFIG_CMD_CRC=y
+CONFIG_CMD_CRC_CMP=y
 CONFIG_CMD_MD=y
 CONFIG_CMD_MEMCMP=y
 CONFIG_CMD_MEMCPY=y
