--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -106,6 +106,10 @@ config FS_SMHFS
 	  located on a debugging host connected to the target running
 	  Barebox
 
+config FS_ZIPFS
+	bool
+	prompt "ZIP archive FS support"
+
 source "fs/pstore/Kconfig"
 source "fs/squashfs/Kconfig"
 
