sama5d2_xplained: update defconfig (enable zipfs).
Signed-off-by: Takeyoshi Kikuchi <kikuchi@centurysys.co.jp>

--- a/arch/arm/configs/sama5d2_xplained_defconfig
+++ b/arch/arm/configs/sama5d2_xplained_defconfig
@@ -194,6 +194,8 @@ CONFIG_ENV_HANDLING=y
 CONFIG_DEFAULT_ENVIRONMENT=y
 # CONFIG_DEFAULT_COMPRESSION_GZIP is not set
 CONFIG_DEFAULT_COMPRESSION_LZO=y
+# CONFIG_DEFAULT_COMPRESSION_LZ4 is not set
+# CONFIG_DEFAULT_COMPRESSION_XZ is not set
 # CONFIG_DEFAULT_COMPRESSION_NONE is not set
 CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d2_xplained/env"
@@ -319,8 +321,8 @@ CONFIG_CMD_SHA256SUM=y
 #
 CONFIG_CMD_FALSE=y
 CONFIG_CMD_GETOPT=y
-# CONFIG_CMD_LET is not set
-# CONFIG_CMD_MSLEEP is not set
+CONFIG_CMD_LET=y
+CONFIG_CMD_MSLEEP=y
 # CONFIG_CMD_READF is not set
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_TEST=y
@@ -752,29 +754,15 @@ CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
 # CONFIG_FS_BPKFS is not set
-# CONFIG_FS_UIMAGEFS is not set
+CONFIG_FS_UIMAGEFS=y
+CONFIG_FS_ZIPFS=y
 # CONFIG_FS_PSTORE is not set
-# CONFIG_FS_SQUASHFS is not set
-
-#
-# ZLIB support disabled
-#
-
-#
-# LZ4 support disabled
-#
-
-#
-# LZO support disabled
-#
-
-#
-# XZ support disabled
-#
-
-#
-# ZSTD support disabled
-#
+CONFIG_FS_SQUASHFS=y
+CONFIG_SQUASHFS_ZLIB=y
+CONFIG_SQUASHFS_LZ4=y
+CONFIG_SQUASHFS_LZO=y
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_ZSTD=y
 # end of Filesystem support
 
 #
@@ -782,11 +770,18 @@ CONFIG_FS_FAT_LFN=y
 #
 CONFIG_PARAMETER=y
 CONFIG_UNCOMPRESS=y
+CONFIG_XXHASH=y
 CONFIG_ZLIB=y
 # CONFIG_BZLIB is not set
-# CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_ZSTD_DECOMPRESS is not set
-# CONFIG_XZ_DECOMPRESS is not set
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
+CONFIG_XZ_DECOMPRESS=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
 # CONFIG_BASE64 is not set
 CONFIG_PROCESS_ESCAPE_SEQUENCE=y
 CONFIG_LZO_DECOMPRESS=y
