sama5d2_xplained: update defconfig.
Signed-off-by: Takeyoshi Kikuchi <kikuchi@centurysys.co.jp>

--- a/arch/arm/configs/sama5d2_xplained_defconfig
+++ b/arch/arm/configs/sama5d2_xplained_defconfig
@@ -158,7 +158,7 @@ CONFIG_PROMPT_HUSH_PS2="y"
 CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
-# CONFIG_MENU is not set
+CONFIG_MENU=y
 # CONFIG_PASSWORD is not set
 CONFIG_DYNAMIC_CRC_TABLE=y
 CONFIG_ERRNO_MESSAGES=y
@@ -189,15 +189,18 @@ CONFIG_PBL_CONSOLE=y
 CONFIG_PARTITION=y
 CONFIG_PARTITION_DISK=y
 CONFIG_PARTITION_DISK_DOS=y
-# CONFIG_PARTITION_DISK_EFI is not set
+CONFIG_PARTITION_DISK_EFI=y
+CONFIG_PARTITION_DISK_EFI_GPT_NO_FORCE=y
+CONFIG_PARTITION_DISK_EFI_GPT_COMPARE=y
 CONFIG_ENV_HANDLING=y
 CONFIG_DEFAULT_ENVIRONMENT=y
 # CONFIG_DEFAULT_COMPRESSION_GZIP is not set
-CONFIG_DEFAULT_COMPRESSION_LZO=y
-# CONFIG_DEFAULT_COMPRESSION_LZ4 is not set
+# CONFIG_DEFAULT_COMPRESSION_LZO is not set
+CONFIG_DEFAULT_COMPRESSION_LZ4=y
 # CONFIG_DEFAULT_COMPRESSION_XZ is not set
 # CONFIG_DEFAULT_COMPRESSION_NONE is not set
-CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
+# CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW is not set
+# CONFIG_DEFAULT_ENVIRONMENT_GENERIC is not set
 CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d2_xplained/env"
 # CONFIG_BAREBOXENV_TARGET is not set
 CONFIG_BAREBOXCRC32_TARGET=y
@@ -349,6 +352,8 @@ CONFIG_CMD_ECHO=y
 CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
 # CONFIG_CMD_LOGIN is not set
+# CONFIG_CMD_MENU is not set
+# CONFIG_CMD_MENUTREE is not set
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
 # end of Console and Framebuffer interaction
@@ -630,8 +635,8 @@ CONFIG_DEV_MEM=y
 
 CONFIG_LED=y
 CONFIG_LED_GPIO=y
-# CONFIG_LED_GPIO_OF is not set
-# CONFIG_LED_GPIO_RGB is not set
+CONFIG_LED_GPIO_OF=y
+CONFIG_LED_GPIO_RGB=y
 # CONFIG_LED_GPIO_BICOLOR is not set
 CONFIG_LED_TRIGGERS=y
 # CONFIG_LED_PCA955X is not set
@@ -799,6 +804,7 @@ CONFIG_LIBFDT=y
 # end of Library gui routines
 
 # CONFIG_BAREBOX_LOGO is not set
+CONFIG_PRINTF_UUID=y
 # CONFIG_NLS is not set
 # CONFIG_BLOBGEN is not set
 CONFIG_ARCH_HAS_STACK_DUMP=y
