--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -590,6 +590,14 @@ config MACH_SAMA5D2_XPLAINED
 	help
 	  Select this if you are using Microchip's sama5d2 xplained evaluation kit
 
+config MACH_CENTURYSYS_GEMINI
+	bool "Century Systems Gemini board"
+	select SOC_SAMA5D2
+	select OFDEVICE
+	select COMMON_CLK_OF_PROVIDER
+	help
+	  Select this if you are using Century Systems's Gemini board
+
 endif
 
 comment "AT91 Board Options"
